--- a/src/components/Section/styles.module.css
+++ b/src/components/Section/styles.module.css
@@ -38,5 +38,16 @@
     &.withAlternativeBackground {
         background-color: var(--color-background-brand-light);
     }
-}
 
+    @media screen and (max-width: 720px) {
+        .container {
+            display: flex;
+            flex-direction: column;
+            margin: 0 auto;
+            padding: var(--spacing-medium) var(--spacing-super-large);
+            width: 100%;
+            max-width: var(--width-page-max);
+            gap: var(--spacing-enourmous);
+        }
+    }
+}
